--- a/src/assets/sass/components/_summary.scss
+++ b/src/assets/sass/components/_summary.scss
@@ -4,18 +4,21 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, min-content);
+  grid-template-rows: repeat(3, min-content);
   justify-content: center;
   align-items: center;
   gap: 2rem;
   padding: 4rem 0;
+  width: 100%;
 
   @include m.md {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0;
-  }
-  @include m.lg {
-    padding: 4rem 2rem;
+    grid-template-columns: minmax(min-content, 30rem) minmax(
+        min-content,
+        max-content
+      );
+    grid-template-rows: repeat(2, min-content);
+    column-gap: 6rem;
+    padding: 4rem;
   }
 
   &__background {
@@ -25,6 +28,14 @@
     object-position: center;
     object-fit: cover;
     filter: opacity(0.3) blur(5px);
+
+    &-empty {
+      background-color: var(--backgroundColor-secondary-1);
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      filter: opacity(0.3) blur(5px);
+    }
   }
 
   &__poster {
@@ -67,9 +78,8 @@
     align-items: center;
     top: 0;
     right: 0;
-    width: 7rem;
-    height: 7rem;
-
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     background-image: linear-gradient(
       to right bottom,
@@ -77,10 +87,20 @@
       rgba(31, 27, 41, 0.8)
     );
 
+    @include m.xs {
+      width: 4.5rem;
+      height: 4.5rem;
+      top: 1%;
+      right: 1%;
+    }
+
     &-number {
       font-family: var(--fontText);
       font-size: 2.5rem;
       color: #fff;
+      @include m.xs {
+        font-size: 2rem;
+      }
     }
   }
 
@@ -111,6 +131,7 @@
   &__details {
     margin: 0 2rem;
     z-index: 1;
+    max-width: 80rem;
   }
 
   &__list {
@@ -176,7 +197,7 @@
   &__nav {
     z-index: 2;
     grid-column: 1/-1;
-    grid-row: 3/-1;
+    grid-row: 2/-1;
     @include m.md {
       margin: 2rem 0;
     }
