--- a/src/assets/sass/components/movie&serie/_mediaList.scss
+++ b/src/assets/sass/components/movie&serie/_mediaList.scss
@@ -25,10 +25,28 @@
   }
 
   &__link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    &-title {
+      font-size: 1.6rem;
+      font-family: var(--fontText);
+      color: var(--textColor-2);
+      margin-top: 1rem;
+      align-self: center;
+    }
+
     &-img {
       width: 100%;
       border-radius: 10px;
       box-shadow: var(--boxShadow-1);
+
+      &--icon {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
     }
   }
 
