Add details about actors

--- a/src/assets/sass/components/details/_sectionDetail.scss
+++ b/src/assets/sass/components/details/_sectionDetail.scss
@@ -1,6 +1,6 @@
 @use "@/assets/sass/abstracts/mixins" as m;
 
-.sectionDetails {
+.sectionDetail {
   justify-content: center;
 
   &:not(:first-child) {
